parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> IF LPAREN condition RPAREN LBRACE body RBRACE
Rule 2     condition -> expression GT expression
Rule 3     condition -> expression LT expression
Rule 4     condition -> expression GE expression
Rule 5     condition -> expression LE expression
Rule 6     condition -> expression EQ expression
Rule 7     condition -> expression NEQ expression
Rule 8     expression -> NUMERIC
Rule 9     expression -> expression GT expression
Rule 10    expression -> expression LT expression
Rule 11    expression -> expression GE expression
Rule 12    expression -> expression LE expression
Rule 13    expression -> expression EQ expression
Rule 14    expression -> expression NEQ expression
Rule 15    body -> PRINT LPAREN STRING RPAREN SEMICOLON
Rule 16    body -> PRINT LPAREN NUMERIC RPAREN SEMICOLON
Rule 17    body -> LBRACE error RBRACE

Terminals, with rules where they appear

EQ                   : 6 13
GE                   : 4 11
GT                   : 2 9
IF                   : 1
LBRACE               : 1 17
LE                   : 5 12
LPAREN               : 1 15 16
LT                   : 3 10
NEQ                  : 7 14
NUMERIC              : 8 16
PRINT                : 15 16
RBRACE               : 1 17
RPAREN               : 1 15 16
SEMICOLON            : 15 16
STRING               : 15
error                : 17

Nonterminals, with rules where they appear

body                 : 1
condition            : 1
expression           : 2 2 3 3 4 4 5 5 6 6 7 7 9 9 10 10 11 11 12 12 13 13 14 14
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . IF LPAREN condition RPAREN LBRACE body RBRACE

    IF              shift and go to state 2

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> IF . LPAREN condition RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 3


state 3

    (1) statement -> IF LPAREN . condition RPAREN LBRACE body RBRACE
    (2) condition -> . expression GT expression
    (3) condition -> . expression LT expression
    (4) condition -> . expression GE expression
    (5) condition -> . expression LE expression
    (6) condition -> . expression EQ expression
    (7) condition -> . expression NEQ expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    condition                      shift and go to state 4
    expression                     shift and go to state 5

state 4

    (1) statement -> IF LPAREN condition . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 7


state 5

    (2) condition -> expression . GT expression
    (3) condition -> expression . LT expression
    (4) condition -> expression . GE expression
    (5) condition -> expression . LE expression
    (6) condition -> expression . EQ expression
    (7) condition -> expression . NEQ expression
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

    GT              shift and go to state 8
    LT              shift and go to state 9
    GE              shift and go to state 10
    LE              shift and go to state 11
    EQ              shift and go to state 12
    NEQ             shift and go to state 13


state 6

    (8) expression -> NUMERIC .

    GT              reduce using rule 8 (expression -> NUMERIC .)
    LT              reduce using rule 8 (expression -> NUMERIC .)
    GE              reduce using rule 8 (expression -> NUMERIC .)
    LE              reduce using rule 8 (expression -> NUMERIC .)
    EQ              reduce using rule 8 (expression -> NUMERIC .)
    NEQ             reduce using rule 8 (expression -> NUMERIC .)
    RPAREN          reduce using rule 8 (expression -> NUMERIC .)


state 7

    (1) statement -> IF LPAREN condition RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 14


state 8

    (2) condition -> expression GT . expression
    (9) expression -> expression GT . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 15

state 9

    (3) condition -> expression LT . expression
    (10) expression -> expression LT . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 16

state 10

    (4) condition -> expression GE . expression
    (11) expression -> expression GE . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 17

state 11

    (5) condition -> expression LE . expression
    (12) expression -> expression LE . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 18

state 12

    (6) condition -> expression EQ . expression
    (13) expression -> expression EQ . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 19

state 13

    (7) condition -> expression NEQ . expression
    (14) expression -> expression NEQ . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 20

state 14

    (1) statement -> IF LPAREN condition RPAREN LBRACE . body RBRACE
    (15) body -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (16) body -> . PRINT LPAREN NUMERIC RPAREN SEMICOLON
    (17) body -> . LBRACE error RBRACE

    PRINT           shift and go to state 23
    LBRACE          shift and go to state 21

    body                           shift and go to state 22

state 15

    (2) condition -> expression GT expression .
    (9) expression -> expression GT expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 2 (condition -> expression GT expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! LT              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! GE              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! LE              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! EQ              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! NEQ             [ reduce using rule 9 (expression -> expression GT expression .) ]


state 16

    (3) condition -> expression LT expression .
    (10) expression -> expression LT expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 3 (condition -> expression LT expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! LT              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! GE              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! LE              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! EQ              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! NEQ             [ reduce using rule 10 (expression -> expression LT expression .) ]


state 17

    (4) condition -> expression GE expression .
    (11) expression -> expression GE expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 4 (condition -> expression GE expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! LT              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! GE              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! LE              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! EQ              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! NEQ             [ reduce using rule 11 (expression -> expression GE expression .) ]


state 18

    (5) condition -> expression LE expression .
    (12) expression -> expression LE expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 5 (condition -> expression LE expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! LT              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! GE              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! LE              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! EQ              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! NEQ             [ reduce using rule 12 (expression -> expression LE expression .) ]


state 19

    (6) condition -> expression EQ expression .
    (13) expression -> expression EQ expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 6 (condition -> expression EQ expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! LT              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! GE              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! LE              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! EQ              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! NEQ             [ reduce using rule 13 (expression -> expression EQ expression .) ]


state 20

    (7) condition -> expression NEQ expression .
    (14) expression -> expression NEQ expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 7 (condition -> expression NEQ expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! LT              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! GE              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! LE              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! EQ              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! NEQ             [ reduce using rule 14 (expression -> expression NEQ expression .) ]


state 21

    (17) body -> LBRACE . error RBRACE

    error           shift and go to state 30


state 22

    (1) statement -> IF LPAREN condition RPAREN LBRACE body . RBRACE

    RBRACE          shift and go to state 31


state 23

    (15) body -> PRINT . LPAREN STRING RPAREN SEMICOLON
    (16) body -> PRINT . LPAREN NUMERIC RPAREN SEMICOLON

    LPAREN          shift and go to state 32


state 24

    (9) expression -> expression GT . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 33

state 25

    (10) expression -> expression LT . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 34

state 26

    (11) expression -> expression GE . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 35

state 27

    (12) expression -> expression LE . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 36

state 28

    (13) expression -> expression EQ . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 37

state 29

    (14) expression -> expression NEQ . expression
    (8) expression -> . NUMERIC
    (9) expression -> . expression GT expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GE expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression EQ expression
    (14) expression -> . expression NEQ expression

    NUMERIC         shift and go to state 6

    expression                     shift and go to state 38

state 30

    (17) body -> LBRACE error . RBRACE

    RBRACE          shift and go to state 39


state 31

    (1) statement -> IF LPAREN condition RPAREN LBRACE body RBRACE .

    $end            reduce using rule 1 (statement -> IF LPAREN condition RPAREN LBRACE body RBRACE .)


state 32

    (15) body -> PRINT LPAREN . STRING RPAREN SEMICOLON
    (16) body -> PRINT LPAREN . NUMERIC RPAREN SEMICOLON

    STRING          shift and go to state 40
    NUMERIC         shift and go to state 41


state 33

    (9) expression -> expression GT expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 9 (expression -> expression GT expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! LT              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! GE              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! LE              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! EQ              [ reduce using rule 9 (expression -> expression GT expression .) ]
  ! NEQ             [ reduce using rule 9 (expression -> expression GT expression .) ]


state 34

    (10) expression -> expression LT expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 10 (expression -> expression LT expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! LT              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! GE              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! LE              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! EQ              [ reduce using rule 10 (expression -> expression LT expression .) ]
  ! NEQ             [ reduce using rule 10 (expression -> expression LT expression .) ]


state 35

    (11) expression -> expression GE expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 11 (expression -> expression GE expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! LT              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! GE              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! LE              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! EQ              [ reduce using rule 11 (expression -> expression GE expression .) ]
  ! NEQ             [ reduce using rule 11 (expression -> expression GE expression .) ]


state 36

    (12) expression -> expression LE expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 12 (expression -> expression LE expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! LT              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! GE              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! LE              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! EQ              [ reduce using rule 12 (expression -> expression LE expression .) ]
  ! NEQ             [ reduce using rule 12 (expression -> expression LE expression .) ]


state 37

    (13) expression -> expression EQ expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 13 (expression -> expression EQ expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! LT              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! GE              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! LE              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! EQ              [ reduce using rule 13 (expression -> expression EQ expression .) ]
  ! NEQ             [ reduce using rule 13 (expression -> expression EQ expression .) ]


state 38

    (14) expression -> expression NEQ expression .
    (9) expression -> expression . GT expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GE expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . EQ expression
    (14) expression -> expression . NEQ expression

  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NEQ resolved as shift
    RPAREN          reduce using rule 14 (expression -> expression NEQ expression .)
    GT              shift and go to state 24
    LT              shift and go to state 25
    GE              shift and go to state 26
    LE              shift and go to state 27
    EQ              shift and go to state 28
    NEQ             shift and go to state 29

  ! GT              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! LT              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! GE              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! LE              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! EQ              [ reduce using rule 14 (expression -> expression NEQ expression .) ]
  ! NEQ             [ reduce using rule 14 (expression -> expression NEQ expression .) ]


state 39

    (17) body -> LBRACE error RBRACE .

    RBRACE          reduce using rule 17 (body -> LBRACE error RBRACE .)


state 40

    (15) body -> PRINT LPAREN STRING . RPAREN SEMICOLON

    RPAREN          shift and go to state 42


state 41

    (16) body -> PRINT LPAREN NUMERIC . RPAREN SEMICOLON

    RPAREN          shift and go to state 43


state 42

    (15) body -> PRINT LPAREN STRING RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 44


state 43

    (16) body -> PRINT LPAREN NUMERIC RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 45


state 44

    (15) body -> PRINT LPAREN STRING RPAREN SEMICOLON .

    RBRACE          reduce using rule 15 (body -> PRINT LPAREN STRING RPAREN SEMICOLON .)


state 45

    (16) body -> PRINT LPAREN NUMERIC RPAREN SEMICOLON .

    RBRACE          reduce using rule 16 (body -> PRINT LPAREN NUMERIC RPAREN SEMICOLON .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for GT in state 15 resolved as shift
WARNING: shift/reduce conflict for LT in state 15 resolved as shift
WARNING: shift/reduce conflict for GE in state 15 resolved as shift
WARNING: shift/reduce conflict for LE in state 15 resolved as shift
WARNING: shift/reduce conflict for EQ in state 15 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 15 resolved as shift
WARNING: shift/reduce conflict for GT in state 16 resolved as shift
WARNING: shift/reduce conflict for LT in state 16 resolved as shift
WARNING: shift/reduce conflict for GE in state 16 resolved as shift
WARNING: shift/reduce conflict for LE in state 16 resolved as shift
WARNING: shift/reduce conflict for EQ in state 16 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 16 resolved as shift
WARNING: shift/reduce conflict for GT in state 17 resolved as shift
WARNING: shift/reduce conflict for LT in state 17 resolved as shift
WARNING: shift/reduce conflict for GE in state 17 resolved as shift
WARNING: shift/reduce conflict for LE in state 17 resolved as shift
WARNING: shift/reduce conflict for EQ in state 17 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 17 resolved as shift
WARNING: shift/reduce conflict for GT in state 18 resolved as shift
WARNING: shift/reduce conflict for LT in state 18 resolved as shift
WARNING: shift/reduce conflict for GE in state 18 resolved as shift
WARNING: shift/reduce conflict for LE in state 18 resolved as shift
WARNING: shift/reduce conflict for EQ in state 18 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 18 resolved as shift
WARNING: shift/reduce conflict for GT in state 19 resolved as shift
WARNING: shift/reduce conflict for LT in state 19 resolved as shift
WARNING: shift/reduce conflict for GE in state 19 resolved as shift
WARNING: shift/reduce conflict for LE in state 19 resolved as shift
WARNING: shift/reduce conflict for EQ in state 19 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 19 resolved as shift
WARNING: shift/reduce conflict for GT in state 20 resolved as shift
WARNING: shift/reduce conflict for LT in state 20 resolved as shift
WARNING: shift/reduce conflict for GE in state 20 resolved as shift
WARNING: shift/reduce conflict for LE in state 20 resolved as shift
WARNING: shift/reduce conflict for EQ in state 20 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 20 resolved as shift
WARNING: shift/reduce conflict for GT in state 33 resolved as shift
WARNING: shift/reduce conflict for LT in state 33 resolved as shift
WARNING: shift/reduce conflict for GE in state 33 resolved as shift
WARNING: shift/reduce conflict for LE in state 33 resolved as shift
WARNING: shift/reduce conflict for EQ in state 33 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 33 resolved as shift
WARNING: shift/reduce conflict for GT in state 34 resolved as shift
WARNING: shift/reduce conflict for LT in state 34 resolved as shift
WARNING: shift/reduce conflict for GE in state 34 resolved as shift
WARNING: shift/reduce conflict for LE in state 34 resolved as shift
WARNING: shift/reduce conflict for EQ in state 34 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 34 resolved as shift
WARNING: shift/reduce conflict for GT in state 35 resolved as shift
WARNING: shift/reduce conflict for LT in state 35 resolved as shift
WARNING: shift/reduce conflict for GE in state 35 resolved as shift
WARNING: shift/reduce conflict for LE in state 35 resolved as shift
WARNING: shift/reduce conflict for EQ in state 35 resolved as shift
WARNING: shift/reduce conflict for NEQ in state 35 resolved as shift
WARNING: shift/reduce conflict for GT in state 36 resolved as shift
WARNING: shift/reduce conflict for LT in state 36 resolved as shift
WARNING: shift/reduce conflict for GE in state 36 resolved as shift
WARNING: shift/reduce conflict for LE in state 36 resolved as shift
